Import depuis maven des librairies nécessaires