@@ -3,26 +3,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<!-- http://wiki.eclipse.org/M2E/Extension_Development -->
-	<!-- http://www.eclipse.org/articles/article.php?file=Article-Eclipse-and-Maven2/index.html -->
-	<!-- https://gwt-m2e.googlecode.com/git/com.levigo.m2e.gwt/ -->
-
 	<groupId>org.dugilos.m2e</groupId>
 	<artifactId>org.dugilos.m2e.nar.parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<!-- tycho -->
 		<tychoVersion>0.22.0</tychoVersion>
-		<!-- <tycho-extras-version>${tycho-version}</tycho-extras-version> -->
-		<!-- <tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs> -->
 		
 		<!-- tycho-support configuration -->
-		<!-- <repositoryPathId>m2eclipse-nar</repositoryPathId> -->
 		<p2MetadataName>M2E Nar Connector</p2MetadataName>
-		
-		
 		
 		<!-- repositories url -->
 		<eclipse.target>luna</eclipse.target>
@@ -31,17 +22,17 @@
 		<eclipse-cdt.version>8.6</eclipse-cdt.version>
 		<eclipse-cdt-repo.url>http://download.eclipse.org/tools/cdt/releases/${eclipse-cdt.version}/</eclipse-cdt-repo.url>
 		
-		<!-- <m2e-releases-repo.url>http://download.eclipse.org/technology/m2e/releases</m2e-releases-repo.url> -->
-		
 		<!-- plugin deploy configuration -->
-		<deployServerId>aphrael-ftp</deployServerId>
-		<repositoryUrl>ftp://aphrael.dugilos.org</repositoryUrl>
-		<repositoryPath>/var/www/p2/m2e-nar</repositoryPath>
+		<p2.deployServerId>aphrael-ftp</p2.deployServerId>
+		<p2.repositoryUrl>ftp://aphrael.dugilos.org</p2.repositoryUrl>
+		<p2.repositoryPath>/var/www/p2/m2e-nar</p2.repositoryPath>
 		
+		<site.deployServerId>aphrael-ftp</site.deployServerId>
+		<site.repositoryUrl>ftp://aphrael.dugilos.org</site.repositoryUrl>
+		<site.repositoryPath>/var/www/p2/m2e-nar</site.repositoryPath>
 	</properties>
 
 	<repositories>
-		
 		<repository>
 			<id>eclipse</id>
 			<layout>p2</layout>
@@ -53,24 +44,15 @@
 			<layout>p2</layout>
 			<url>${eclipse-cdt-repo.url}</url>
 		</repository>
-		
-		<!-- 
-		<repository>
-			<id>m2e-tests</id>
-			<url>${m2e-releases-repo.url}</url>
-			<layout>p2</layout>
-		</repository>
-		 -->
 	</repositories>
 
 	<modules>
 		<module>org.dugilos.m2e.nar</module>
 		<module>org.dugilos.m2e.nar.feature</module>
-		<!-- <module>org.dugilos.m2e.nar.tests</module> -->
 	</modules>
 	
 	<build>
-	<extensions>
+		<extensions>
 			<!-- Enabling the use of FTP -->
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
@@ -86,23 +68,6 @@
 				<version>${tychoVersion}</version>
 				<extensions>true</extensions>
 			</plugin>
-			
-			<!-- 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-source-plugin</artifactId>
-				<version>${tychoVersion}</version>
-				<executions>
-					<execution>
-						<id>plugin-source</id>
-						<goals>
-							<goal>plugin-source</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			 -->
-			
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
@@ -111,71 +76,19 @@
 					<resolver>p2</resolver>
 					<ignoreTychoRepositories>true</ignoreTychoRepositories>
 					<pomDependencies>consider</pomDependencies>
-					
-					<!-- 
-					<environments>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86_64</arch>
-						</environment>
-						
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-
-						<environment>
-							<os>macosx</os>
-							<ws>cocoa</ws>
-							<arch>x86_64</arch>
-						</environment>
-					</environments>
-					 -->
 				</configuration>
 			</plugin>
-			
-			
-			<!-- 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-packaging-plugin</artifactId>
-				<version>${tychoVersion}</version>
-				<configuration>
-					<format>yyyyMMdd-HHmm</format>
-					<sourceReferences>
-						<generate>false</generate>
-					</sourceReferences>
-				</configuration>
-				<dependencies>
-					<!- -
-					<dependency>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-sourceref-jgit</artifactId>
-						<version>${tycho-extras-version}</version>
-					</dependency>
-					- ->
-				</dependencies>
-			</plugin>
-			-->
 		</plugins>
 		
 		<pluginManagement>
 			<plugins>
-				
-				
-				
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
@@ -219,13 +132,10 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
 	</build>
 
 	<profiles>
-		
-		<!-- 
-		<profile>
+		<!-- <profile>
 			<id>sign</id>
 			<activation>
 				<property>
@@ -249,35 +159,7 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
-		 -->
-		
-		<profile>
-			<id>deploy</id>
-			<activation>
-				<file>
-					<missing>.tycho-support</missing>
-				</file>
-			</activation>
-			<build>
-				<pluginManagement>
-					<plugins>
-						<!--
-						We only care about deploying the update site. Disable the deployment of the standard
-						Maven resources and only deploy the update site in the feature build which is defined
-						in the feature-build profile below.
-						-->
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-deploy-plugin</artifactId>
-							<configuration>
-								<skip>true</skip>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-			</build>
-		</profile>
+		</profile> -->
 		
 		<!--
 		Feature build profile will only be activated in the presence of a feature.xml file in
@@ -318,50 +200,6 @@
 							<artifactRepositoryName>${p2MetadataName}</artifactRepositoryName>
 						</configuration>
 					</plugin>
-					<!-- 
-					<plugin>
-						<groupId>io.tesla.tycho</groupId>
-						<artifactId>feature-zip-plugin</artifactId>
-						<version>0.0.1</version>
-						<configuration>
-							<sourceDirectory>${project.build.directory}/site</sourceDirectory>
-							<zip>${project.build.directory}/${project.artifactId}-${project.version}-site.zip</zip>
-						</configuration>
-						<executions>
-							<execution>
-								<id>feature-zip</id>
-								<phase>package</phase>
-								<goals>
-									<goal>zip</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					 -->
-					<!-- Deploy the update site zip to the server using the maven-upload-plugin. -->
-					<!--
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>maven-upload-plugin</artifactId>
-						<version>0.0.1</version>
-						<executions>
-							<execution>
-								<id>publish-site</id>
-								<phase>deploy</phase>
-								<goals>
-									<goal>upload-file</goal>
-								</goals>
-								<configuration>
-									<file>${project.build.directory}/${project.artifactId}-${project.version}-site.zip</file>
-									<serverId>${deployServerId}</serverId>
-									<repositoryUrl>${repositoryUrl}</repositoryUrl>
-									<repositoryPath>${repositoryPath}</repositoryPath>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					-->
-					<!-- Deploy the update site to the server -->
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>wagon-maven-plugin</artifactId>
@@ -376,9 +214,9 @@
 								<configuration>
 									<fromDir>${project.build.directory}/site</fromDir>
 									<includes>**</includes>
-									<toDir>${repositoryPath}</toDir>
-									<url>${repositoryUrl}</url>
-									<serverId>${deployServerId}</serverId>
+									<toDir>${p2.repositoryPath}</toDir>
+									<url>${p2.repositoryUrl}</url>
+									<serverId>${p2.deployServerId}</serverId>
 								</configuration>
 							</execution>
 						</executions>
@@ -418,53 +256,30 @@
 							<artifactRepositoryName>${p2MetadataName}</artifactRepositoryName>
 						</configuration>
 					</plugin>
-					<!-- 
 					<plugin>
-						<groupId>io.tesla.tycho</groupId>
-						<artifactId>feature-zip-plugin</artifactId>
-						<version>0.0.1</version>
-						<configuration>
-							<sourceDirectory>${project.build.directory}/site</sourceDirectory>
-							<zip>${project.build.directory}/${project.artifactId}-${project.version}-site.zip</zip>
-						</configuration>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>wagon-maven-plugin</artifactId>
+						<version>1.0-beta-4</version>
 						<executions>
 							<execution>
-								<id>feature-zip</id>
-								<phase>package</phase>
-								<goals>
-									<goal>zip</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					 -->
-					<!-- Deploy the update site zip to the server using the maven-upload-plugin. -->
-					<!--
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>maven-upload-plugin</artifactId>
-						<version>0.0.1</version>
-						<executions>
-							<execution>
-								<id>publish-site</id>
+								<id>upload-repo</id>
 								<phase>deploy</phase>
 								<goals>
-									<goal>upload-file</goal>
+									<goal>upload</goal>
 								</goals>
 								<configuration>
-									<file>${project.build.directory}/${project.artifactId}-${project.version}-site.zip</file>
-									<serverId>${deployServerId}</serverId>
-									<repositoryUrl>${repositoryUrl}</repositoryUrl>
-									<repositoryPath>${repositoryPath}</repositoryPath>
+									<fromDir>${project.build.directory}/site</fromDir>
+									<includes>**</includes>
+									<toDir>${site.repositoryPath}</toDir>
+									<url>${site.repositoryUrl}</url>
+									<serverId>${site.deployServerId}</serverId>
 								</configuration>
 							</execution>
 						</executions>
 					</plugin>
-					-->
 				</plugins>
 			</build>
 		</profile>
-		
 	</profiles>
 	
 </project>
